RESOLVED FIXED152259
Misc. small fixes in snippet related code.
https://bugs.webkit.org/show_bug.cgi?id=152259
Summary Misc. small fixes in snippet related code.
Mark Lam
Reported 2015-12-14 10:29:03 PST
This is a collection of small issues I noticed while working on bitops snippets. Preparing a separate patch to land these.
Attachments
proposed patch. (8.02 KB, patch)
2015-12-14 11:29 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2015-12-14 11:29:55 PST
Created attachment 267305 [details] proposed patch.
Saam Barati
Comment 2 2015-12-14 11:36:50 PST
Comment on attachment 267305 [details] proposed patch. r=me
Mark Lam
Comment 3 2015-12-14 11:46:19 PST
Thanks for the review. Landed in r194042: <http://trac.webkit.org/r194042>.
Note You need to log in before you can comment on or make changes to this bug.