Misc. small fixes in snippet related code. https://bugs.webkit.org/show_bug.cgi?id=152259

Reviewed by Saam Barati.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileArithMul):
- When loading a constant JSValue for a node, use the one that the node already
  provides instead of reconstructing it.  This is not a bug, but the fix makes
  the code cleaner.

* jit/JITBitAndGenerator.cpp:
(JSC::JITBitAndGenerator::generateFastPath):
- No need to do a bitand with a constant int 0xffffffff operand.

* jit/JITBitOrGenerator.cpp:
(JSC::JITBitOrGenerator::generateFastPath):
- Fix comments: bitor is '|', not '&'.
- No need to do a bitor with a constant int 0 operand.

* jit/JITBitXorGenerator.cpp:
(JSC::JITBitXorGenerator::generateFastPath):
- Fix comments: bitxor is '^', not '&'.

* jit/JITRightShiftGenerator.cpp:
(JSC::JITRightShiftGenerator::generateFastPath):
- Renamed a jump target name to be clearer about its purpose.



Canonical link: https://commits.webkit.org/170364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194042 268f45cc-cd09-0410-ab3c-d52691b4dbfc