Source/JavaScriptCore/jit/JITBitXorGenerator.cpp
@@ -40,7 +40,7 @@ void JITBitXorGenerator::generateFastPath(CCallHelpers& jit)
         JSValueRegs var = m_leftOperand.isConstInt32() ? m_right : m_left;
         SnippetOperand& constOpr = m_leftOperand.isConstInt32() ? m_leftOperand : m_rightOperand;
         
-        // Try to do intVar & intConstant.
+        // Try to do intVar ^ intConstant.
         m_slowPathJumpList.append(jit.branchIfNotInt32(var));
         
         jit.moveValueRegs(var, m_result);
@@ -54,7 +54,7 @@ void JITBitXorGenerator::generateFastPath(CCallHelpers& jit)
     } else {
         ASSERT(!m_leftOperand.isConstInt32() && !m_rightOperand.isConstInt32());
         
-        // Try to do intVar & intVar.
+        // Try to do intVar ^ intVar.
         m_slowPathJumpList.append(jit.branchIfNotInt32(m_left));
         m_slowPathJumpList.append(jit.branchIfNotInt32(m_right));
         
